На 3 сеции добавил форму, также на 4 добавил слайдер

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,8 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
-@import 'blocks/advantages.scss'
+@import 'blocks/advantages.scss';
+@import 'blocks/titles';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'blocks/carousel';
