--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -14,4 +14,11 @@
         font-size: 16px;
         margin-top: 67px;
     }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        background: #C70101;
+        color: #ffffff;
+        font-size: 16px;
+    }
 }
