--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -17,8 +17,11 @@
     &_submit {
         width: 100%;
         height: 55px;
-        background: #C70101;
-        color: #ffffff;
         font-size: 16px;
+    }
+    &_mini {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
     }
 }
