--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -7,4 +7,10 @@
         font-size: 20px;
         color: #FFFFFF;
     }
+    label.error {
+        margin-bottom: 15px;
+        color: #FFFFFF;
+        text-align: center;
+        border: none;
+    }
 }
