--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,4 +18,5 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/footer';
-@import 'blocks/reviews';
+@import 'blocks/feed';
+@import 'blocks/modal';
